# tam

./: .worktree-init.toml  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml  flake.nix  implem_plan.md  tam_manifesto.md
.github/workflows/: ci.yml  release.yml
crates/tam-cli/: Cargo.toml  build.rs
crates/tam-cli/src/: cli.rs  client.rs  config.rs  ledger.rs  main.rs  sessions.rs  task.rs
crates/tam-cli/src/tui/: app.rs  mod.rs  ui.rs
crates/tam-daemon/: Cargo.toml
crates/tam-daemon/src/: agent.rs  daemon.rs  notify.rs  provider.rs
crates/tam-daemon/tests/: integration.rs
crates/tam-proto/: Cargo.toml
crates/tam-proto/src/: lib.rs
crates/tam-worktree/: Cargo.toml
crates/tam-worktree/src/: config.rs  git.rs  init.rs  lib.rs  pretty.rs  worktree.rs
