[package]
name = "tam-worktree"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Git worktree management and project discovery library"
readme = "../../README.md"
keywords = ["git", "worktree", "cli", "terminal", "project"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = { workspace = true }
colored = { workspace = true }
dirs = { workspace = true }
globset = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
